# iris

./: .gitignore  .gitmodules  AGENTS.md  CITATION.cff  CMakeLists.txt  CODE_DUPLICATION_ANALYSIS.md  CODE_OF_CONDUCT.md  DATA_TABLES.md  EXECUTIVE_SUMMARY.md  FINAL_OPTIMIZATION_RECOMMENDATIONS.md  MANIFEST.in  OPTIMIZATION_RECOMMENDATIONS.md  PARALLELISM_AWARE_OPTIMIZATION_PLAN.md  PR370_PARALLELIZATION_ANALYSIS.md  README.md  REVISED_OPTIMIZATION_RECOMMENDATIONS.md  SPECIFIC_TEST_EXAMPLES.md  TEST_ANALYSIS_README.md  TEST_SUITE_ANALYSIS.md  docker-compose.yml  experiments.tsv  pyproject.toml  pytest.ini  rebuild.sh  run.sh  setup.py  test.py
.devcontainer/: devcontainer.json  ensure-ssh-agent.sh
.github/: GPU_CONCURRENCY.md  copilot-instructions.md
.github/scripts/: acquire_gpus.sh  cleanup_ports.sh  container_build.sh  container_exec.sh  container_run.sh  examples_config.json  gpu_allocator.sh  release_gpus.sh  run_new_examples.sh  run_perf_benchmark.sh  run_tests.sh
.github/workflows/: auto-label.yml  build-container.yml  copilot-setup-steps.yml  docker-build-push.yml  docker-nightly.yml  docs.yml  gpu-reset.yml  iris-external-validation-test.yml  iris-nightly-triton-test.yml  iris-performance-regression-test.yml  iris-pip-install-test.yml  iris-tests-apptainer.yml  iris-tests-dev.yml  iris-tests-external.yml  iris-tests-package.yml  iris-tests.yml  lint.yml
K-2246/v45/: STATUS.md  SUPERSEDED.md  analyze_v45_1.py  bench_p3_paired_events.py  bench_v45_anchor.py  corpus_manifest.json  summary.md  v45_1_manifest.json  v45_anchor.csv  v45_anchor_run2.csv  v45_baseline.SUPERSEDED.csv  v45_manifest.json  v45_paired_canonical_event.csv  v45_paired_canonical_event_run2.csv
K-2252/v47/: interference_by_primitive.csv  manifest.json  summary.md  v47_baseline_R3.csv  v47_corpus.csv  v47_corpus.parquet  v47_corpus.sha256  v47_paired_R3.csv
K-2306/v65/: bench_j4_atomic_max_release.py  data_quality_v65.py  finalize_v65.py  summary.md  v65_J4_baseline.parquet  v65_J4_baseline.rank0.csv  v65_J4_baseline.rank1.csv  v65_J4_baseline.rank2.csv  v65_J4_baseline.rank3.csv  v65_J4_baseline.rank4.csv  v65_J4_baseline.rank5.csv  v65_J4_baseline.rank6.csv  v65_J4_baseline.rank7.csv  v65_J4_baseline_agg_by_local_remote.csv  v65_J4_baseline_agg_by_scope_bs_dtype.csv
apptainer/: build.sh  iris-rocm6.3.1.def  iris-rocm7.0.def  iris.def
baremetal/: README.md  build.sh  run.sh
benchmark/: gemm_all_scatter_comprehensive_roofline_mi300x.md  gemm_all_scatter_deep_tuning_mi300x.md  gemm_all_scatter_hints_analysis_mi300x.md  gemm_all_scatter_mi300x.md  gemm_all_scatter_multishape_analysis_mi300x.md  gemm_all_scatter_optimization_mi300x.md  gemm_all_scatter_roofline_1000pt_mi300x.md  gemm_all_scatter_roofline_mi300x.md  gemm_all_scatter_scaling_mi300x.md  gemm_all_scatter_tiling_sweep_mi300x.md
benchmark/ccl/: bench_all_gather.py  bench_all_reduce.py  bench_all_reduce_channels.py  bench_all_reduce_vllm.py  bench_all_to_all.py  bench_reduce_scatter.py  comprehensive_sweep.py  plot_sweep_results.py
benchmark/examples/: bench_all_gather.py  bench_all_gather_gemm_pull.py  bench_all_gather_gemm_push.py  bench_flash_decode.py  bench_moe.py  benchmark_all_gather_gemm.py  benchmark_all_gather_gemm_pull.py  benchmark_all_gather_gemm_push.py  benchmark_all_gather_gemm_push_tile.py  benchmark_flash_decode.py  benchmark_gemm_all_scatter.py  benchmark_gemm_all_scatter_1000pt_roofline.py  benchmark_gemm_all_scatter_deep_tuning.py  benchmark_gemm_all_scatter_tiling_sweep.py  benchmark_moe.py
benchmark/ops/: bench_all_gather_matmul.py  bench_all_gather_matmul_hbm_buffer.py  bench_matmul_all_gather.py  bench_matmul_all_reduce.py  bench_matmul_all_reduce_stages.py
corpus/v80_duty_cycle_pc1/: duty_cycle_kernel.py  pc1_analysis.py  run_sweep.py
corpus/v82_pc_imbalance_pc1/: k2388_fit_pc1.py  k2388_pc_imbalance.py  run_in_container.sh
csrc/finegrained_allocator/: build.sh  setup.py  test_import_only.py  test_minimal.py
csrc/include/: gpu_array.hpp  vmem_allocator.hpp
csrc/src/: bindings.cpp
csrc/standalone/: .gitignore  Makefile  README.md  p2p_atomics_hip.cpp  p2p_atomics_hsa.cpp
dataset/: ag_gemm.json  flash_decode_config_iris.json  flash_decode_config_rccl.json  gemm_all_scatter.json  gemm_config.csv
docker/: Dockerfile  Dockerfile.ccl  Dockerfile.dev  Dockerfile.rocm6.4  Dockerfile.rocm7.0  Dockerfile.rocm7.1  build-dev.sh  build.sh  run.sh
docs/: .nojekyll  CONTRIBUTING.md  README_bench.md  bench_harness.md  bench_migration_example.md  build_docs.sh  conf.py  index.md  irisrun.md  test_optimization.md
examples/: README.md
iris/: README.md  __init__.py  _common.py  _distributed_helpers.py  _mpi_helpers.py  _tensor_ops.py  bench.py  device_utils.py  fd_passing.py  gluon.py  gpu_array_wrapper.py  hip.py  iris.py  iris.py.backup  irisrun.py  logging.py  symmetric_heap.py  tensor_creation.py  tensor_utils.py  topology.py  util.py
irisrun_cli/: __init__.py  main.py
irisx/: .gitignore  CMakeLists.txt  README.md
irisx/benchmarks/: CMakeLists.txt  all_put.hip  put.hip  utils.hpp
irisx/examples/: CMakeLists.txt
irisx/examples/01_message_passing/: message_passing.hip
irisx/include/iris/: iris.hpp  logger.hpp
irisx/include/iris/detail/: logging.hpp
irisx/scripts/: iris_run  rebuild
irisx/tests/: CMakeLists.txt  common.hpp  test_allocation.hip  test_local_atomic.hip  test_local_load.hip  test_local_store.hip  test_producer.hip  test_remote_atomic.hip  test_remote_load.hip  test_remote_store.hip
k2447/: README.md  _atomic_worker.py  analyze_orig.py  analyze_reconciled.py  atomic_dcc_sweep.py  procrustes_summary.csv  raw_dcc_sweep.csv  reconciled_sweep.csv  reconciled_sweep_validated.csv  rocprof_pmc.csv  rocprof_pmc_verify.py
scripts/: assign_test_markers.py  collect_trace.sh  link_bandwidth.py  roccap_wrapper.py  run_all_tests.sh  run_core_tests.sh  run_core_tests_slurm.sh  run_example_slurm.sh
slurm/: k058_hbm_test_ws2.sbatch  k058_hbm_test_ws4.sbatch  k058_hbm_test_ws8.sbatch
sweep/: ccl_sweep.py  cost_model.py  validate_coverage.py
tests/: run_tests_distributed.py
(+583 files in other folders)
