# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Advanced Micro Devices, Inc. All rights reserved.

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "iris"
dynamic = ["version"]
description = "Python- and Triton-based library that provide SHMEM-like RDMA support in Triton."
authors = [
    { name = "Muhammad Awad", email = "muhaawad@amd.com" },
    { name = "Muhammad Osama", email = "Muhammad.Osama@amd.com" },
    { name = "Brandon Potter", email = "Brandon.Potter@amd.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "requests",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["iris"]

# ---- setuptools-scm versioning ----
[tool.setuptools_scm]
version_scheme = "post-release"   # .postN after last tag
local_scheme = "node-and-date"    # add commit hash (e.g. +gabc1234) and date (e.g. +20250914)
fallback_version = "0.0.0"        # used if git metadata unavailable

[tool.ruff]
line-length = 120
exclude = [
    "**/*.ipynb"                  # match notebooks anywhere
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E701", "E731", "E741", "F841", "F401"]

[tool.ruff.format]
quote-style = "double"